--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
 
     // Stricter Typechecking Options
     "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
+    // "exactOptionalPropertyTypes": true,  // Disabled for API flexibility
 
     // Style Options
     // "noImplicitReturns": true,
